# RCAT

./: .gitignore  .readthedocs.yml  AUTHORS.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
config/: config_main.ini  observations_metadata_Bi.py
docs/: Makefile  README_configuration.md  README_statistics.md  conf.py  config.rst  development.rst  geography_masking.rst  howto.rst  index.rst  install.rst  make.bat  py_colors.rst  rcat_plots.rst  rcat_stats.rst  rcatool.plot.rst  rcatool.utils.rst  read_write_netcdf.rst  requirements.txt  statistics.rst  stats.rst  tutorials.rst  usecase1.rst  usecase2.rst  usecase3.rst  usecase4.rst  user_api.rst  utils.rst
docs/source/: api.rst  atmosfuncs.rst  background.rst  conf.py  config.rst  convolve.rst  development.rst  draw_polygon.rst  file_io.rst  geosfuncs.rst  grid_interpolation.rst  howto.rst  index.rst  ini_reader.rst  internal_api.rst  observations_metadata.rst  plots.rst  polygons-howto.rst  rcat_plots.rst  rcat_statistics.rst  rcat_stats.rst  release.rst  sal.rst  statfuncs.rst  statistics.rst  stats.rst  tutorials.rst  usecase1.rst  usecase2.rst  usecase3.rst  utils.rst  validation_plots.rst
polygons/: Norway.txt  United_Kingdom.txt
rcat/: RCAT_main.py  RCAT_plots.py  RCAT_stats.py  atmosfuncs.py  validation_plots.py
rcat/config/: observations_metadata_Bi.py
rcat/plot/: colors.py  plots.py
rcat/runtime/: RCAT_main.py  RCAT_plots.py  RCAT_stats.py
rcat/stats/: ASoP.py  (+6 more)
scripts/: main.py  statistics.py
src/: RCAT_main.py  main.py  rcat_statistics.py  validation_plots.py
(+212 files in other folders)
